[gd_scene load_steps=8 format=3 uid="uid://cw8qnwcs5mwc1"]

[ext_resource type="Script" path="res://TextureButtondzfs.gd" id="1_5krwr"]
[ext_resource type="Texture2D" uid="uid://mc342q51iqlj" path="res://spritesheet (3).png" id="2_3xyof"]
[ext_resource type="FontFile" uid="uid://b4qj2mp64y1hi" path="res://Swiss 721 Extended Bold.otf" id="3_1rqpw"]
[ext_resource type="Texture2D" uid="uid://cnqkeydkyrv8h" path="res://Helldivers-2-Logo.png" id="4_15q65"]

[sub_resource type="Animation" id="Animation_a8ps7"]
resource_name = "Pressed"

[sub_resource type="Animation" id="Animation_eb28i"]
resource_name = "Unpressed"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_60vb5"]
_data = {
"Pressed": SubResource("Animation_a8ps7"),
"Unpressed": SubResource("Animation_eb28i")
}

[node name="Node2D" type="Node2D"]

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 470.0
offset_top = 455.0
offset_right = 633.0
offset_bottom = 540.0
scale = Vector2(1.42222, 1.42222)
script = ExtResource("1_5krwr")

[node name="button" type="Sprite2D" parent="TextureButton"]
position = Vector2(81.4817, 42.3)
scale = Vector2(0.159925, 0.159925)
texture = ExtResource("2_3xyof")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureButton/button"]
libraries = {
"": SubResource("AnimationLibrary_60vb5")
}

[node name="Label" type="Label" parent="."]
offset_left = 205.0
offset_top = 310.0
offset_right = 966.0
offset_bottom = 376.0
theme_override_colors/font_color = Color(1, 0.913725, 0, 1)
theme_override_fonts/font = ExtResource("3_1rqpw")
theme_override_font_sizes/font_size = 55
text = "STRATAGEM MANAGER"
horizontal_alignment = 1

[node name="Helldivers-2-logo" type="Sprite2D" parent="."]
position = Vector2(585, 200)
scale = Vector2(0.130802, 0.130802)
texture = ExtResource("4_15q65")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 1037.0
offset_top = -76.0
offset_right = 1658.0
offset_bottom = 1343.0
scale = Vector2(0.615, 0.623)
color = Color(0.145098, 0.145098, 0.145098, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect2"]
offset_left = -2063.0
offset_top = -17.7715
offset_right = -1471.0
offset_bottom = 1205.23
scale = Vector2(1, 1.12)
color = Color(0.145098, 0.145098, 0.145098, 1)
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="TextureButton" to="TextureButton" method="_on_button_down"]
[connection signal="button_up" from="TextureButton" to="TextureButton" method="_on_button_up"]
[connection signal="pressed" from="TextureButton" to="TextureButton" method="_on_pressed"]
